--- a/core/res/res/values/nitrogen_symbols.xml
+++ b/core/res/res/values/nitrogen_symbols.xml
@@ -116,4 +116,11 @@
   <java-symbol type="color" name="fastscroller_text_color" />
 
   <java-symbol type="bool" name="config_oldQtiTelephony" />
+    <!-- Power Menu -->
+    <java-symbol type="string" name="reboot_to_recovery_title" />
+    <java-symbol type="string" name="reboot_to_recovery_message" />
+    <java-symbol type="string" name="reboot_to_bootloader_title" />
+    <java-symbol type="string" name="reboot_to_bootloader_message" />
+    <java-symbol type="string" name="reboot_title" />
+    <java-symbol type="string" name="reboot_message" />
 </resources>
